Errores con las imagenes (Solucionar)
Cambios para solucionar errores con las imágenes.

--- a/index.html
+++ b/index.html
@@ -68,11 +68,11 @@
           </a>
 
           <a href="http://mimetrica.com/portfolio/english-zooco-jewelry-shop/?lang=es" target="_blank">
-            <img src="img/evakay.jpg" alt="Tienda-Eva-Kay-2">
+            <img src="img/evakay.JPG" alt="Tienda-Eva-Kay-2">
           </a>
 
           <a href="http://mimetrica.com/portfolio/english-zooco-jewelry-shop/?lang=es" target="_blank">
-            <img src="img/evakay2.jpg" alt="Tienda-Eva-Kay-3">
+            <img src="img/evakay2.JPG" alt="Tienda-Eva-Kay-3">
           </a>
 
         </div>
@@ -98,14 +98,14 @@
 
           <div class="grid-logos">
 
-            <a href="#">
-              <img src="img/logo-scl.jpg" alt="Tienda-Eva-Kay">
+            <a href="http://www.serviciocortelaser.com/" target="_blank">
+              <img src="img/logo-scl.JPG" alt="Logo-SCL">
             </a>
-            <a href="#">
-              <img src="img/logo-mc.jpg" alt="Falda-Laser">
+            <a href="http://solucionesgraficasmc.com/" target="_blank">
+              <img src="img/logo-mc.JPG" alt="Logo-MC">
             </a>
-            <a href="#">
-              <img src="img/logo-myfisio.jpg" alt="Tienda-Eva-Kay">
+            <a href="http://myfisiomilicias.com/" target="_blank">
+              <img src="img/logo-myfisio.JPG" alt="Logo-MYFISIO">
             </a>
 
           </div>
