Replace span by strong.
 It's better to use strong and modify CSS.

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
         <!--06-Párrafos-->
         <p>
-          Trabajo realizado trabajando en <span class="nombre">Mimétrica</span>. Estética de lamas de madera de pino realizado para <span class="nombre">Eva Kay</span>, una marca de joyería con un producto 100% artesano, 100% español, exquisito y distinto a toda la oferta existente.
+          Trabajo realizado trabajando en <strong class="nombre">Mimétrica</strong>. Estética de lamas de madera de pino realizado para <strong class="nombre">Eva Kay</strong>, una marca de joyería con un producto 100% artesano, 100% español, exquisito y distinto a toda la oferta existente.
         </p>
 
         <div class="insta">
