Replace div by h6.
I have changed div by h6 for not use text directly into the divs but it doesn't solve the problem (There are ornaments in HTML).

--- a/index.html
+++ b/index.html
@@ -113,11 +113,11 @@
 
       </div>
 
-      <div class="punto">.</div>
-      <div class="punto">.</div>
-      <div class="punto">.</div>
-      <div class="punto">.</div>
-      <div id="last" class="punto">.</div>
+      <h6 class="punto">.</h6>
+      <h6 class="punto">.</h6>
+      <h6 class="punto">.</h6>
+      <h6 class="punto">.</h6>
+      <h6 id="last" class="punto">.</h6>
 
       <h2>¿Y AHORA?</h2>
 
