Use pseudo-class last-child
Replace id #last by pseudo-class .punto:last-child.

--- a/index.html
+++ b/index.html
@@ -113,12 +113,14 @@
 
       </div>
 
-      <h6 class="punto">.</h6>
-      <h6 class="punto">.</h6>
-      <h6 class="punto">.</h6>
-      <h6 class="punto">.</h6>
-      <h6 id="last" class="punto">.</h6>
-
+      <div>
+        <h6 class="punto">.</h6>
+        <h6 class="punto">.</h6>
+        <h6 class="punto">.</h6>
+        <h6 class="punto">.</h6>
+        <h6 class="punto">.</h6>
+      </div>
+      
       <h2>¿Y AHORA?</h2>
 
       <div class="seccion">
